--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,3 +3,18 @@ set -sg escape-time 0
 set-window-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+
+bind-key -r M-k resize-pane -U 5
+bind-key -r M-j resize-pane -D 5
+bind-key -r M-h resize-pane -L 5
+bind-key -r M-l resize-pane -R 5
+
+bind-key -r C-k resize-pane -U
+bind-key -r C-j resize-pane -D
+bind-key -r C-h resize-pane -L
+bind-key -r C-l resize-pane -R
+
+bind-key -r k select-pane -U
+bind-key -r j select-pane -D
+bind-key -r h select-pane -L
+bind-key -r l select-pane -R
