--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,11 @@ bind-key -r C-j resize-pane -D
 bind-key -r C-h resize-pane -L
 bind-key -r C-l resize-pane -R
 
-bind-key -r k select-pane -U
-bind-key -r j select-pane -D
-bind-key -r h select-pane -L
-bind-key -r l select-pane -R
+bind-key k select-pane -U
+bind-key j select-pane -D
+bind-key h select-pane -L
+bind-key l select-pane -R
+
+bind-key c new-window -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
