--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,3 +22,7 @@ bind-key l select-pane -R
 bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}"
+
+set-option -g mouse-select-pane on
+
+set -g display-panes-time 1000 # slightly longer pane indicators display time
