Added Tmux Plugin Manager, and the tmux-yank plugin.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,3 +28,7 @@ set -g mouse-resize-pane on
 set -g mouse-select-window on
 
 set -g display-panes-time 1000 # slightly longer pane indicators display time
+
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+run '~/.tmux/plugins/tpm/tpm'
