Changed mouse mode for tmux 2.1

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,9 +23,7 @@ bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}"
 
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 set -g display-panes-time 1000 # slightly longer pane indicators display time
 
