--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,8 @@ bind-key '"' split-window -v -c "#{pane_current_path}"
 
 set -g mouse on
 
+set -g default-terminal "screen-256color"
+
 set -g display-panes-time 1000 # slightly longer pane indicators display time
 
 set -g @plugin 'tmux-plugins/tmux-yank'
