--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 set -sg escape-time 0
 
 set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 
 bind-key -r M-k resize-pane -U 5
 bind-key -r M-j resize-pane -D 5
@@ -29,5 +29,6 @@ set -g default-terminal "screen-256color"
 set -g terminal-overrides ",xterm-256color:Tc"
 
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'Morantron/tmux-fingers'
 
 run '~/.tmux/plugins/tpm/tpm'
